--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.18.0",
